test/good/generics/name02.px

func f<B>(Int->B g) B def
    return g(2)

B = 3

print f(_+B)
