test/bad/functions/lambda10.px

func f(Int->Int->Int g) def
    return

f(_+_-_)
